# Stage-0-Backend--Internship

./: README.md  manage.py  pyproject.toml
core/: urls.py  views.py
publication/: .env  .gitignore  asgi.py  build.sh  db.sqlite3  manage.py  requirements.txt  settings.py  urls.py  vercel.json  wsgi.py
publication/core/: urls.py  views.py
publication/env/: pyvenv.cfg
publication/enviroment/: pyvenv.cfg
publication/publication/: settings.py  wsgi.py
publication/sh/: pyvenv.cfg
