[tool.poetry]
name = "publication"
version = "0.1.0"
description = ""
authors = ["vincenttommi <vincenttommi@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
# List your dependencies here, for example:
# requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
