[tool.poetry]
name = "publication"
version = "0.1.0"
description = ""
authors = ["vincenttommi <vincenttommi@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.12"  # This ensures your project uses Python 3.12 or newer

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
